fixup the left overhang of truncated text

--- a/css/footer.css
+++ b/css/footer.css
@@ -116,6 +116,7 @@
     height: 72px;
     position: relative;
     display:block;
+    padding-right: 10px;
 }
 
 #placeling_left_footer{
@@ -130,7 +131,6 @@
     height: 100%;
     float: right;
 	text-align: right;
-    padding-right: 5px;
 }
 
 #placeling_top_footer{
